--- a/tasks/templates/signup.html
+++ b/tasks/templates/signup.html
@@ -26,9 +26,10 @@
 
                 <input type="text" name="first_name" id="first_name" class="inputSignin" placeholder="Ingrese el nombre">
                 <input type="text" name="last_name" id="last_name" class="inputSignin" placeholder="Ingrese los apellidos">
-                <input type="text" name="username" id="username" class="inputSignin" placeholder="Ingrese el usuario para el Inicio de Sesión">
+                <input type="text" name="dependencia" id="dependencia" class="inputSignin" placeholder="Ingrese la dependencia">
+                <input type="text" name="username" id="username" class="inputSignin" placeholder="Ingrese el usuario para el inicio de sesión">
                 <input type="password" name="password1" id="password1" class="inputSignin" placeholder="Ingrese la contraseña">
-                <input type="password" name="password2" id="password2" class="inputSignin" placeholder="Confirmar Contraseña">
+                <input type="password" name="password2" id="password2" class="inputSignin" placeholder="Confirmar contraseña">
 
                 <button class="inputSignin btnVerde">Registrar</button>
 
