--- a/tasks/templates/updateUser.html
+++ b/tasks/templates/updateUser.html
@@ -35,6 +35,10 @@
                     <label for="{{ form.last_name.id_for_label }}">Apellidos:</label>
                     {{ form.last_name|add_class:"inputSignin" }}
                 </div>
+                <div class="formUpdate">
+                    <label for="{{ form.dependencia.id_for_label }}">Dependencia:</label>
+                    {{ form.dependencia|add_class:"inputSignin" }}
+                </div>
 
                 <button class="inputSignin btnVerde">Actualizar</button>
 
