--- a/tasks/templates/usersDetail.html
+++ b/tasks/templates/usersDetail.html
@@ -14,6 +14,7 @@
                         <p class="h2Pendiente txtUsuario">{{user.username}}</p>
                         <p>Nombre: {{user.first_name}}</p>
                         <p>Apellido: {{user.last_name}}</p>
+                        <p>Dependencia: {{user.dependencia}}</p>
                     </a>
                 </li>
                 {% endfor %}
