--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -19,18 +19,37 @@
     <header class="headerInicio">
 
         <nav class="navbar">
-            <a href="{% url 'tasks' %}" class="">Actividades Pendientes</a>
-            <a href="{% url 'tasks_completed' %}" class="">Actividades Completadas</a>
-            <a href="{% url 'create_task' %}" class="">Crear Actividad</a>
-            <a href="{% url 'inicioAdmin' %}" class="">Actividades Registradas</a>
-            <a href="{% url 'signup' %}" class="">Registrar Usuario</a>
-            <a href="{% url 'usersDetail' %}" class="">Usuarios Registrados</a>
-            <a href="{% url 'signin' %}" class="">Iniciar Sesión</a>
-            <a href="{% url 'logout' %}" class="">Cerrar sesión</a>
-            <a href="{% url 'index' %}" class="">Inicio</a>
+
+            {% if user.is_authenticated %}
+
+                {% if user.is_superuser%}
+
+                <a href="{% url 'inicioAdmin' %}" >Actividades Registradas</a>
+                <a href="{% url 'signup' %}" >Registrar Usuario</a>
+                <a href="{% url 'usersDetail' %}" >Usuarios Registrados</a>
+
+                {% else %}
+
+                <a href="{% url 'tasks' %}" >Actividades Pendientes</a>
+                <a href="{% url 'tasks_completed' %}" >Actividades Completadas</a>
+                <a href="{% url 'create_task' %}" >Crear Actividad</a>
+
+                {% endif %}
+
+            <a href="{% url 'logout' %}" >Cerrar sesión</a>
+
+            {% else %}
+            
+            
+            <a href="{% url 'index' %}" >Inicio</a>
+            <a href="{% url 'signin' %}" >Iniciar Sesión</a>
+
+            {% endif %}
+
             <a href="#"><img src="{% static 'img/logochiquinquira.png' %}" alt="Logo Chiquinquirá"></a>
 
         </nav>
+        
         <section class="textosHeader">
             <h1>Optimiza la gestión de tus actividades diarias</h1>
             <h2>y generar informes de productividad de forma eficiente</h2>
