--- a/tasks/templates/signup.html
+++ b/tasks/templates/signup.html
@@ -19,7 +19,7 @@
             <h1 class="tituloSignin"> Registrar Usuario </h1>
             <p class="textoSignin">Agrega un nuevo usuario</p>
 
-            <form action="/signup/" method="POST" class="formSignin">
+            <form action="{% url 'signup' %}" method="POST" class="formSignin">
 
                 {{error}}
                 {% csrf_token %}
@@ -27,6 +27,9 @@
                 <input type="text" name="first_name" id="first_name" class="inputSignin" placeholder="Ingrese el nombre">
                 <input type="text" name="last_name" id="last_name" class="inputSignin" placeholder="Ingrese los apellidos">
                 <input type="text" name="dependencia" id="dependencia" class="inputSignin" placeholder="Ingrese la dependencia">
+                <label for="id_is_superuser" class="checkbox-label">
+                    <input type="checkbox" name="is_superuser" id="id_is_superuser" class="checkbox-input"> Es Administrador
+                </label>
                 <input type="text" name="username" id="username" class="inputSignin" placeholder="Ingrese el usuario para el inicio de sesión">
                 <input type="password" name="password1" id="password1" class="inputSignin" placeholder="Ingrese la contraseña">
                 <input type="password" name="password2" id="password2" class="inputSignin" placeholder="Confirmar contraseña">
