--- a/tasks/templates/baseP.html
+++ b/tasks/templates/baseP.html
@@ -37,6 +37,7 @@
                 <a href="{% url 'tasks' %}" >Actividades Pendientes</a>
                 <a href="{% url 'tasks_completed' %}" >Actividades Completadas</a>
                 <a href="{% url 'create_task' %}" >Crear Actividad</a>
+                <a href="{% url 'reportTasks' %}" >Reporte de Actividades</a>
 
                 {% endif %}
 
@@ -63,7 +64,7 @@
             <div class="row">
                 <div class="col">
 
-                    <h4>Alcaldía de Chiquinquira</h4>
+                    <h4>Alcaldía de Chiquinquirá</h4>
                     <p><b>Dirección:</b> Calle 17 No. 7 A - 48 CAM Chiquinquirá - Boyacá</p>
                     <p><b>Horario de Atención:</b> Lunes a Jueves de 8:00 a.m. a 12:00 m y 2:00 p.m. a 6:00 p.m. Viernes
                         de 8:00 a.m. a 12:00 m y de 2:00 p.m. a 5:30 p.m</p>
