--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -33,6 +33,7 @@
                 <a href="{% url 'tasks' %}" >Actividades Pendientes</a>
                 <a href="{% url 'tasks_completed' %}" >Actividades Completadas</a>
                 <a href="{% url 'create_task' %}" >Crear Actividad</a>
+                <a href="{% url 'reportTasks' %}" >Reporte de Actividades</a>
 
                 {% endif %}
 
