--- a/tasks/templates/signup.html
+++ b/tasks/templates/signup.html
@@ -27,9 +27,11 @@
                 <input type="text" name="first_name" id="first_name" class="inputSignin" placeholder="Ingrese el nombre">
                 <input type="text" name="last_name" id="last_name" class="inputSignin" placeholder="Ingrese los apellidos">
                 <input type="text" name="dependencia" id="dependencia" class="inputSignin" placeholder="Ingrese la dependencia">
+                {% if user.username == 'Admin'%}
                 <label for="id_is_superuser" class="checkbox-label">
                     <input type="checkbox" name="is_superuser" id="id_is_superuser" class="checkbox-input"> Es Administrador
                 </label>
+                {% endif %}
                 <input type="text" name="username" id="username" class="inputSignin" placeholder="Ingrese el usuario para el inicio de sesión">
                 <input type="password" name="password1" id="password1" class="inputSignin" placeholder="Ingrese la contraseña">
                 <input type="password" name="password2" id="password2" class="inputSignin" placeholder="Confirmar contraseña">
